Bug 1425413 - Fix non-jit platform MacroAssembler failure. r=jorendorff

MozReview-Commit-ID: FR1eUPTkMsb